// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Acta useActaState hook test When a state change, the value in the the component is updated. 1`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  />
  <p
    id="simpleValue"
  >
    Not Set
  </p>
  <p
    id="stateWithInitialValue"
  />
  <div
    id="functionnalComponentRoot"
  >
    <p
      id="valueFromState"
    >
      Not set yet
    </p>
    <p
      id="valueFromEvent"
    >
      Not set yet
    </p>
  </div>
  <button
    id="unmountFunctionalComponent"
    onClick={[Function]}
  >
    unmount functionnal component
  </button>
</div>
`;

exports[`Acta useActaState hook test When a state change, the value in the the component is updated. 2`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  />
  <p
    id="simpleValue"
  >
    Not Set
  </p>
  <p
    id="stateWithInitialValue"
  />
  <div
    id="functionnalComponentRoot"
  >
    <p
      id="valueFromState"
    >
      Value from updated state
    </p>
    <p
      id="valueFromEvent"
    >
      Not set yet
    </p>
  </div>
  <button
    id="unmountFunctionalComponent"
    onClick={[Function]}
  >
    unmount functionnal component
  </button>
</div>
`;
